log/build_2024-04-28_19-13-48/wheels_control/stderr.log
  File "/home/lemmy/robotis_ws/install/wheels_control/lib/python3.10/site-packages/wheels_control/predefined_path.py", line 1
    "#!/usr/bin/env python3
    ^
SyntaxError: unterminated string literal (detected at line 1)

